As of right now the way my project is presently constructed endpoints work, im getting build failure in the terminal but in my intellijay IDE i get a successful build i dont know what the issue is but i assume it compiles successfully. so i am going to push these changes. I will now set up CORS allow origin to be able to connect the vite app to my REST API